--- a/.env
+++ b/.env
@@ -1,7 +1,3 @@
-MONGO=mongodb+srv://308team:admin@cluster0.4mbbi49.mongodb.net/userinfo?retryWrites=true&w=majority&appName=Cluster0
-MYSQL_HOST=127.0.0.1
-MYSQL_USER=root
-MYSQL_PASSWORD=1234
-MYSQL_DATABASE=flightinfosystem
+MONGO=mongodb+srv://308team:1234@cluster0.tbp2epi.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET=your_jwt_secret
 PORT=3000
